Fix modal content layout bug

--- a/public/assets/css/modal.scss
+++ b/public/assets/css/modal.scss
@@ -132,7 +132,7 @@ textarea {
   font-weight: 400;
   letter-spacing: 0.5px;
 }
-@media (max-width: 830px) {
+@media (max-width: 767px) {
   #modal-title {
     padding-top: 26px;
     font-weight: 400;
@@ -189,8 +189,8 @@ textarea {
 
   .modal-content {
     width: 300px;
-    height: 160px;
-    margin-left: 150px;
+    height: 260px;
+    margin-left: 0;
     border-radius: 2px;
   }
 
@@ -198,13 +198,5 @@ textarea {
     width: 32px;
     height: 32px;
     background-size: 32px 32px;
-  }
-}
-@media (max-width: 767px) {
-  .modal-content {
-    width: 300px;
-    height: 260px;
-    margin-left: 0;
-    border-radius: 2px;
   }
 }
